; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_install-printf.c_specifier_instance.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_install-printf.c_specifier_instance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8, i8*, i8*, i8**)* @specifier_instance to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @specifier_instance(i8 signext %0, i8* %1, i8* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i8 %0, i8* %6, align 1
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8** %3, i8*** %9, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %10, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %16 = call i32 @assert(%struct.TYPE_3__* %15)
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @unit_name_to_instance(i32 %19, i8** %11)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i32, i32* %12, align 4
  store i32 %24, i32* %5, align 4
  br label %43

25:                                               ; preds = %4
  %26 = load i8*, i8** %11, align 8
  %27 = call i64 @isempty(i8* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %40

29:                                               ; preds = %25
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @strempty(i32 %32)
  %34 = call i32 @free_and_strdup(i8** %11, i32 %33)
  store i32 %34, i32* %12, align 4
  %35 = load i32, i32* %12, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %29
  %38 = load i32, i32* %12, align 4
  store i32 %38, i32* %5, align 4
  br label %43

39:                                               ; preds = %29
  br label %40

40:                                               ; preds = %39, %25
  %41 = load i8*, i8** %11, align 8
  %42 = load i8**, i8*** %9, align 8
  store i8* %41, i8** %42, align 8
  store i32 0, i32* %5, align 4
  br label %43

43:                                               ; preds = %40, %37, %23
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i32 @assert(%struct.TYPE_3__*) #1

declare dso_local i32 @unit_name_to_instance(i32, i8**) #1

declare dso_local i64 @isempty(i8*) #1

declare dso_local i32 @free_and_strdup(i8**, i32) #1

declare dso_local i32 @strempty(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
